--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|robots\.txt|bootstrap)
+RewriteCond $1 !^(index\.php|images|files|robots\.txt|bootstrap)
 RewriteRule ^(.*)$ index.php/$1 [L]
